@@ -492,6 +492,7 @@ All (GUI):
 - Fix setting of the frame icon when using non-standard icon sizes (vid).
 - Implement wxDV_ROW_LINES in generic wxDataViewCtrl (RedCAT).
 - Added EVT_AUI_PANE_ACTIVATED event (Ronny Krüger).
+- Added wxSplitterWindow::SetSashInvisible() (Armel Asselin).
 
 
 GTK:
